--- a/Resources/views/ElFinder/show.html.twig
+++ b/Resources/views/ElFinder/show.html.twig
@@ -10,9 +10,8 @@
 
 {% block javascript_files %}
     {% javascripts
-        'bundles/alphalemonelfinder/vendor/ElFinder/vendor/jquery-ui.css'
-        'bundles/alphalemonelfinder/vendor/ElFinder/css/elfinder.css'
-        'bundles/alphalemonelfinder/vendor/ElFinder/css/theme.css'
+        'bundles/alphalemonelfinder/vendor/ElFinder/js/jquery.ui.js'
+        'bundles/alphalemonelfinder/vendor/ElFinder/vendor/jquery-ui.min.js'
     %}
     <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
